# LittleCppEngine

./: .gitignore  CMakeLists.txt  README.md  premake5.lua
Genesis/: CMakeLists.txt  premake5.lua
Genesis/include/: Genesis.h  Precompiled.h
Genesis/include/Core/: Application.h  Input.h  Key.h  Layer.h  Logger.h  MouseButton.h  Scene.h  Window.h
Genesis/include/MessageBus/: Message.h  MessageBus.h  MessageQueue.h  MessageSubscriber.h
Genesis/include/Renderer/: IndexBuffer.h  Renderer.h  Shader.h  Texture.h  Vertex.h  VertexArray.h  VertexBuffer.h
Genesis/include/Utils/: OrthographicCamera.h  OrthographicCameraController.h
Genesis/src/: Window.cpp  test.cpp
Genesis/src/Core/: Application.cpp  EntryPoint.cpp  Input.cpp  Key.cpp  Logger.cpp  MouseButton.cpp  Scene.cpp  Window.cpp
Genesis/src/MessageBus/: MessageBus.cpp  MessageQueue.cpp
Genesis/src/Renderer/: IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
Genesis/src/Utils/: OrthographicCamera.cpp  OrthographicCameraController.cpp
Genesis/thirdparties/glad/: premake5.lua
Genesis/thirdparties/glad/include/glad/: glad.h
Genesis/thirdparties/glad/src/: glad.c
Genesis/thirdparties/glfw/: CMakeLists.txt  premake5.lua
Genesis/thirdparties/spdlog/: CMakeLists.txt
Genesis/thirdparties/stb/: CMakeLists.txt  premake5.lua
Sandbox/: CMakeLists.txt  premake5.lua
Sandbox/include/: SandboxLayer.h  SandboxScene.h
Sandbox/src/: Sandbox.cpp  SandboxLayer.cpp  SandboxScene.cpp  SandboxScene.h  main.cpp
